INT-21475 theme_snap: Fixed subscenarios for revamping the TOC lock icon alignment and activity icon margins

--- a/scss/_brandcolor.scss
+++ b/scss/_brandcolor.scss
@@ -536,7 +536,6 @@ $custom-menu-text-color: rgb(255, 255, 255) !default; // Need to define this wit
       }
       .courseindex-link {
         background-color: $brand-primary;
-        max-width: 70%;
       }
     }
 
