--- a/scss/_toc.scss
+++ b/scss/_toc.scss
@@ -492,7 +492,7 @@ label[for="toc-search-input"]{
         vertical-align: text-bottom;
         padding: unset;
         margin: unset;
-        width: 50%;
+        width: 200%;
 
         .lightboxgallery.icon {
           filter: $lightbox-filter;
